# mblib

./: AUTHORS  CMakeLists.txt  Doxyfile.in  LICENSE  README.markdown  README.md  build_docs.sh  index.html  params.json
src/: mb.F90  mb_io.F90  mb_precision.F90  mb_utilities.F90  mb_variables.F90
src/interfaces/: dalton_interface.F  input_readers.F90  integral_interface.F90
tests/dalton_tests/: mb_embed_3_fullcoul  mb_embed_3_mulliken  mb_gas_2  mb_gas_3_mulliken
